# contactwork

./: AboutPage.cpp  AboutPage.h  CMakeLists.txt  ContactManager.cpp  ContactManager.h  FavoritePageView.cpp  FavoritePageView.h  MainWindow.h  NavigationPanel.cpp  NavigationPanel.h  SettingsPage.cpp  SettingsPage.h  contact.cpp  contact.h  contact.hbak  icon.qrc  main.cpp  mainwindow.cpp
include/: ElaWidgetTools.qrc
models/: ContactItemDelegate.cpp  ContactItemDelegate.h  ContactListModel.cpp  ContactListModel.h  ContactSignalHub.cpp  ContactSignalHub.h  FavoriteItemDelegate.cpp  FavoriteItemDelegate.h  GroupedContactItemDelegate.cpp  GroupedContactItemDelegate.h  GroupedContactListModel.cpp  GroupedContactListModel.h
views/: BaseView.cpp  BaseView.h  ContactAddView.cpp  ContactAddView.h  ContactDetailView.cpp  ContactDetailView.h  ContactEditView.cpp  ContactEditView.h  ContactListView.cpp  ContactListView.h  FavoritePageView.cpp  FavoritePageView.h  GroupedContactListView.cpp  GroupedContactListView.h  HomePageView.cpp  HomePageView.h  T_BaseComponents.cpp  T_BaseComponents.h
